--- a/webpage.html
+++ b/webpage.html
@@ -1,17 +1,34 @@
-<!doctype html>
-<html>
-	<head>
-		<meta>
-		<title>Just a generic page</title>
-		<script>
-			setTimeout(wakeUpUser,5000)
-			function wakeUpUser() { alert("Are you going to stare at a blank screen")}
-		</script>
-	</head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+        }   
+    </style>
 
-	<body>
-		<h1>Just a generic heading</h1>
-		<p>Not a lot to read here</p>
-	</body>
+</head>
 
+<body>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <section>
+        <h2>Home</h2>
+        <p>This is the home section of the website.</p>
+    </section>
+    <section>
+        <h2>About Us</h2>
+        <p>This is the about section of the website.</p>
+    </section>
+    <footer>
+        <p>&copy; 2024 My Website</p>
+    </footer>
+
+    
+</body>
 </html>
